--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
+//    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
     compileOnly 'org.projectlombok:lombok'
+
+    //jwt
+    implementation 'com.auth0:java-jwt:4.2.1'
+
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
+
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
