--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,14 @@ dependencies {
 //    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
     compileOnly 'org.projectlombok:lombok'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     //jwt
     implementation 'com.auth0:java-jwt:4.2.1'
+
+    //MapStruct
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
